samples/_failures_safe/1761617185_5cb1f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf2f4b7b.c: In function ‘main’:
./samples/SAFE/__tmp_cf2f4b7b.c:170:5: error: expected declaration or statement at end of input
  170 |     }
      |     ^
